# forwarder-bases

./: .gitignore  Cargo.toml  README.md  RELEASE_CHECKLIST.md  justfile
.github/ISSUE_TEMPLATE/: task.md
.github/workflows/: bindings.yml  contracts.yml
bindings/: Cargo.toml  README.md
bindings/src/: lib.rs  proxy.rs
contracts/: .solhint.other.json  README.md  foundry.toml  package.json
contracts/src/: EmergencyMigratableForwarderBase.sol  ForwarderBase.sol  ForwarderBaseUpgradeable.sol  NativeTokenReceiver.sol  SweepableNativeTokenReceiver.sol  TransientFallbackHandler.sol  Version.sol
contracts/src/interfaces/: IEmergencyMigratable.sol  IFallbackHandler.sol  IForwarder.sol  IImplementation.sol  ILogicRefSpecific.sol  INativeTokenReceiver.sol  IProtocolAdapterSpecific.sol  ISweepable.sol  IVersion.sol
contracts/test/: EmergencyMigratableForwarderBase.t.sol  ForwarderBase.initialization.t.sol  ForwarderBase.t.sol  ForwarderBaseUpgradeable.initialization.t.sol  ForwarderBaseUpgradeable.storage.t.sol  ForwarderBaseUpgradeable.t.sol  ForwarderBaseUpgradeable.upgrade.t.sol  NativeTokenReceiver.t.sol  SweepableNativeTokenReceiver.t.sol  TransientFallbackHandler.invariant.t.sol  TransientFallbackHandler.storage.t.sol  TransientFallbackHandler.t.sol  Version.t.sol
contracts/test/examples/: ERC1155Example.sol  ERC1967ProxyUnsafe.sol  ERC20Example.sol  ERC721.e.sol  EmergencyMigratableForwarder.e.sol  Forwarder.e.sol  ForwarderTarget.e.sol  ForwarderUpgradeableExample.sol  ProtocolAdapter.m.sol  ReentrantTargetExample.sol
contracts/test/helpers/: TestWithRoles.sol
