[package]
name = "anoma-forwarder-bases-bindings"
version = "1.0.0-rc.1"
description = "The bindings to forwarder base contracts and their interfaces."
keywords.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
alloy = { workspace = true }
serde = { workspace = true }
